--- a/Guest_book.html
+++ b/Guest_book.html
@@ -3,8 +3,56 @@
   <head>
     <meta charset="utf-8">
     <title>Kim Daeun</title>
-    <link rel="stylesheet" type="text/css" href="/Users/kimdaeun/Desktop/김다은사전/style.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+@font-face {
+  font-family:"nanum";
+  src:
+  url(/Users/kimdaeun/Desktop/NanumMyeongjo.ttf) format("truetype"),
+  url(/Users/kimdaeun/Desktop/NanumMyeongjo.otf) format("opentype");
+}
+body{
+  font-family : "nanum";
+  background-color: white;
+  color:green;
+}
+header{
+  border-bottom:2px solid green;
+  text-align:center;
+  font-size:20px;
+}
+.index{
+  border-right:2px solid green;
+  width:150px;
+  float:left;
+  height:1000px;
+  padding-top:10px;
+  margin:5px;
+}
+.index ol {
+  list-style: none;
+}
+.index li{
+  margin-bottom:10px;
+}
+.index a {
+  color:green;
+}
+
+article{
+  padding-top:50px;
+}
+article{
+  float:left;
+  padding-left:120px;
+}
+#control{
+  float:right;
+}
+
+</style>
+
   </head>
   <body>
     <header>
